# AstraEngine

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Cross.toml  README.md  design-qa.md  rust-toolchain.toml  vcpkg.json
AstraEMU/Source/Programs/astra-emu-family-package/: Cargo.toml
AstraEMU/Source/Providers/astra-emu-translation-openai-compatible/: Cargo.toml
Docs/: README.md
Emulator/Source/Families/astra-emu-fvp/: Cargo.toml  MODIFICATIONS.md  THIRD_PARTY_NOTICES.md  build.rs
Emulator/Source/Families/astra-emu-fvp/src/: archive.rs  ffi.rs  hcb.rs  lib.rs  provider.rs
Emulator/Source/Families/na_mpeg2_decoder/: Cargo.toml
Emulator/Source/Families/na_mpeg2_decoder/src/video/: decoder.rs  startcode.rs
Emulator/Source/Families/na_wmv_player/: Cargo.toml
Emulator/Source/Families/na_wmv_player/src/: api.rs
Emulator/Source/Families/na_wmv_player/src/wma/: decoder.rs
Emulator/Source/FamilyApi/astra-emu-family-api/: Cargo.toml
Emulator/Source/FamilyApi/astra-emu-family-api/src/: ffi.rs  provider.rs
Emulator/Source/Manager/astra-emu-manager/: Cargo.toml  build.rs
Emulator/Source/Manager/astra-emu-manager-core/: Cargo.toml
Emulator/Source/Manager/astra-emu-manager-core/src/: desktop_source.rs  evidence.rs  family_loader.rs  filter.rs  identity.rs  lib.rs  library.rs  patch.rs  probe.rs  runtime_provider.rs  scanner.rs
Emulator/Source/Manager/astra-emu-manager-ui-slint/: Cargo.toml  build.rs
Emulator/Source/Manager/astra-emu-manager-ui-slint/src/: lib.rs
Emulator/Source/Manager/astra-emu-manager-ui-slint/ui/: manager.slint
Emulator/Source/Manager/astra-emu-manager/src/: android_platform.rs  android_source.rs  audio_executor.rs  family_host.rs  gamepad.rs  host.rs  main.rs  metadata_runtime.rs  platform_source.rs  stage_renderer.rs  unsupported_source.rs  video_executor.rs
Emulator/Source/Programs/astra-emu-cli/: Cargo.toml  build.rs
Emulator/Source/Programs/astra-emu-cli/src/: input.rs  lib.rs  main.rs  rasterizer.rs  runner.rs
Emulator/Source/Programs/astra-emu-evidence/: Cargo.toml
Emulator/Source/Programs/astra-emu-evidence/src/: lib.rs  main.rs
Emulator/Source/Programs/astra-emu-schema/: Cargo.toml
Emulator/Source/Programs/astra-emu-schema/src/: lib.rs  main.rs
Emulator/Source/Providers/astra-emu-metadata/: Cargo.toml
Emulator/Source/Providers/astra-emu-metadata/src/: bangumi.rs  cover.rs  lib.rs  license.rs  matcher.rs  model.rs  vndb.rs
Engine/Plugins/Examples/ExampleRuntime/: CMakeLists.txt  ExampleRuntime.plugin.yaml
Engine/Plugins/Examples/ExampleRuntime/Private/: ExampleRuntimePlugin.cpp
Engine/Plugins/Examples/Phase1Example/: CMakeLists.txt  Phase1Example.plugin.yaml.in
Engine/Plugins/Examples/Phase1Example/Source/: InvalidBadAbi.cpp  InvalidNoEntry.cpp  Phase1Example.cpp
Engine/Programs/AstraGame/: CMakeLists.txt
Engine/Programs/AstraGame/Private/: main.cpp
Engine/Programs/AstraPhase1Smoke/: CMakeLists.txt
Engine/Programs/AstraPhase1Smoke/Private/: main.cpp
Engine/Programs/astra/: CMakeLists.txt
Engine/Programs/astra/Private/: DocCheck.cpp  ShippingWrapper.cpp  Tools.cpp  ToolsHash.cpp  ToolsLogging.cpp  main.cpp
Engine/Programs/astra/Private/Tools/: Evidence.inc  PlayableEvidence.inc  ValidationEvidence.inc
Engine/Programs/astra/Public/Astra/Tools/: Tools.hpp
Engine/Runtime/Asset/: CMakeLists.txt
Engine/Runtime/Asset/Private/: Asset.cpp  AssetCook.cpp  AssetInternal.hpp  AssetMetadata.cpp  AssetSerialization.cpp
Engine/Runtime/Asset/Public/Astra/Asset/: Asset.hpp
Engine/Runtime/AstraGame/: CMakeLists.txt
Engine/Runtime/AstraGame/Private/: AstraGame.cpp
Engine/Runtime/AstraGame/Public/Astra/AstraGame/: AstraGame.hpp
Engine/Runtime/AstraRuntime/: CMakeLists.txt
Engine/Runtime/AstraRuntime/Private/: AstraRuntimeSession.cpp  AstraScript.cpp
Engine/Runtime/AstraRuntime/Public/Astra/AstraRuntime/: AstraRuntimeSession.h  AstraScript.h
Engine/Runtime/Bootstrap/: CMakeLists.txt
Engine/Runtime/Bootstrap/Private/: DefaultProjectContentPlugin.cpp  RuntimeProviderRegistry.cpp
Engine/Runtime/Bootstrap/Public/Astra/Bootstrap/: NativeRuntimePlugin.h  RuntimeProviderRegistry.h
Engine/Runtime/Core/: CMakeLists.txt
Engine/Runtime/Core/Private/: Assert.cpp  BuildInfo.cpp  BuildInfo.generated.cpp.in  Config.cpp  Diagnostics.cpp  Error.cpp  Log.cpp  Logging.cpp  Path.cpp  Profiling.cpp  Serialization.cpp  StableId.cpp  Time.cpp
Engine/Runtime/Core/Public/Astra/Core/: Assert.h  BuildInfo.hpp  Config.h  Config.hpp  Diagnostics.h  Diagnostics.hpp  Error.hpp  EventBus.h  Log.h  Logging.hpp  Path.h  Path.hpp  Profiling.hpp  Result.h  Serialization.hpp  StableId.hpp  Time.h  Time.hpp  Types.hpp
Engine/Runtime/Media/: CMakeLists.txt
Engine/Runtime/Media/Private/: Media.cpp  MediaDecode.cpp  MediaDecodePhase7.cpp  MediaFilter.cpp  MediaInternal.hpp  MediaProviders.cpp  MediaSerialization.cpp  MediaTimeline.cpp  SdlRendererStub.cpp
Engine/Runtime/Media/Public/Astra/Media/: Media.hpp
Engine/Runtime/ModuleRuntime/: CMakeLists.txt
Engine/Runtime/ModuleRuntime/Private/: ExtensionRegistry.cpp  ModuleManager.cpp  ModuleRuntime.cpp  PluginDescriptor.cpp  ServiceRegistry.cpp
Engine/Runtime/ModuleRuntime/Public/Astra/ModuleRuntime/: AstraModuleABI.h  ExtensionRegistry.h  ModuleAbi.h  ModuleManager.h  ModuleRuntime.hpp  PluginDescriptor.h  ServiceRegistry.h
Engine/Runtime/Platform/: CMakeLists.txt
Engine/Runtime/Platform/Private/: BackendAnchor.cpp  Platform.cpp  PlatformServices.cpp  SdlPlatform.cpp
Engine/Runtime/Script/: CMakeLists.txt
Engine/Runtime/Script/Private/: NativeDslParser.cpp  Script.cpp  ScriptExecution.cpp  ScriptLua.cpp  ScriptPrivate.hpp  ScriptSerialization.cpp
Engine/Tests/: CMakeLists.txt  Phase1Tests.cpp  PhaseTests.cpp  RuntimeTests.cpp
Engine/Tests/Phases/: Phase10_Asset.cpp  Phase11_Media.cpp  Phase12_Script.cpp  Phase13_AstraVN.cpp  Phase17_Tools.cpp  Phase18_AstraGame.cpp  Phase3_Core.cpp  Phase4_Platform.cpp  Phase5_ModuleRuntime.cpp  Phase6_Property.cpp  Phase7_Scene.cpp  Phase8_Runtime.cpp  Phase9_SaveLoadReplay.cpp
(+1642 files in other folders)
