cmake_minimum_required(VERSION 3.28)

project(AstraEngine VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Lib")

option(ASTRA_BUILD_TESTS "Build AstraEngine tests" ON)

set(ASTRA_PLUGIN_OUTPUT_ROOT "${CMAKE_BINARY_DIR}/Plugins")
set(ASTRA_SAMPLE_PROJECT_ROOT "${CMAKE_SOURCE_DIR}/Projects/Samples/MinimalVN")

include(CTest)
include(cmake/AstraTargets.cmake)

find_package(SDL3 CONFIG REQUIRED)
find_package(Freetype REQUIRED)
find_package(harfbuzz CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
find_package(yaml-cpp CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(EnTT CONFIG REQUIRED)
find_path(MINIAUDIO_INCLUDE_DIRS "miniaudio.h" REQUIRED)

if(ASTRA_BUILD_TESTS)
    find_package(Catch2 CONFIG REQUIRED)
endif()

add_subdirectory(Engine/Runtime/Core)
add_subdirectory(Engine/Runtime/ApplicationCore)
add_subdirectory(Engine/Runtime/RHI)
add_subdirectory(Engine/Runtime/AssetCore)
add_subdirectory(Engine/Runtime/VFS)
add_subdirectory(Engine/Runtime/AssetRegistry)
add_subdirectory(Engine/Runtime/ExtensionRegistry)
add_subdirectory(Engine/Runtime/VNPropertySystem)
add_subdirectory(Engine/Runtime/VNRuntimeServices)
add_subdirectory(Engine/Runtime/Bootstrap)
add_subdirectory(Engine/Runtime/ModuleRuntime)
add_subdirectory(Engine/Runtime/PlatformSDL3)
add_subdirectory(Engine/Runtime/Renderer2D)
add_subdirectory(Engine/Runtime/TextCore)
add_subdirectory(Engine/Runtime/AudioCore)
add_subdirectory(Engine/Runtime/AstraRuntime)
add_subdirectory(Engine/Plugins/Runtime/DefaultRuntimeProviders)
add_subdirectory(Engine/Plugins/Examples/ExampleRuntime)
add_subdirectory(Engine/Programs/AstraGame)

if(ASTRA_BUILD_TESTS)
    add_subdirectory(Engine/Tests)
endif()
