[workspace]
resolver = "2"
members = [
    "Engine/Source/Runtime/astra-core",
    "Engine/Source/Runtime/astra-package",
    "Engine/Source/Runtime/astra-asset",
    "Engine/Source/Runtime/astra-media-core",
    "Engine/Source/Runtime/astra-media",
    "Engine/Source/Runtime/astra-ui-core",
    "Engine/Source/Runtime/astra-ui-yakui",
    "Engine/Source/Runtime/astra-ui-plugin-abi",
    "Engine/Source/Runtime/astra-policy",
    "Engine/Source/Modules/AstraVN/astra-vn-script",
    "Engine/Source/Modules/AstraVN/astra-vn-presentation",
    "Engine/Source/Modules/AstraVN/astra-vn-core",
    "Engine/Source/Modules/AstraVN/astra-vn-policy",
    "Engine/Source/Modules/AstraVN/astra-vn-commands",
    "Engine/Source/Modules/AstraVN/astra-vn-system",
    "Engine/Source/Modules/AstraVN/astra-vn-ui",
    "Engine/Source/Modules/AstraVN/astra-vn-save",
    "Engine/Source/Modules/AstraVN/astra-vn-package",
    "Engine/Source/Modules/AstraVN/astra-vn-plugin",
    "Engine/Source/Modules/AstraVN/astra-vn-editor",
    "Engine/Source/Modules/AstraVN/astra-vn-runtime-provider",
    "Engine/Source/Modules/AstraVN/astra-vn",
    "Engine/Source/Runtime/astra-runtime",
    "Engine/Source/Runtime/astra-engine",
    "Engine/Source/Runtime/astra-plugin-abi",
    "Engine/Source/Runtime/astra-plugin",
    "Engine/Source/Runtime/astra-player-core",
    "Engine/Source/Runtime/astra-headless-protocol",
    "Engine/Source/Runtime/astra-product-host",
    "Engine/Source/Platform/astra-target",
    "Engine/Source/Platform/astra-platform",
    "Engine/Source/Platform/astra-platform-common",
    "Engine/Source/Platform/astra-platform-headless",
    "Engine/Source/Platform/astra-platform-windows",
    "Engine/Source/Platform/astra-platform-linux",
    "Engine/Source/Platform/astra-platform-macos",
    "Engine/Source/Platform/astra-platform-ios",
    "Engine/Source/Platform/astra-platform-android",
    "Engine/Source/Platform/astra-platform-web",
    "Engine/Source/Developer/astra-cook",
    "Engine/Source/Developer/astra-release",
    "Engine/Source/Developer/astra-property",
    "Engine/Source/Developer/astra-property-derive",
    "Engine/Source/Developer/astra-test",
    "Engine/Source/Developer/astra-headless-test",
    "Engine/Source/Developer/astra-headless-test-macros",
    "Engine/Source/Developer/astra-headless-vn-adapter",
    "Engine/Source/Developer/astra-observability",
    "Engine/Source/Programs/astra-cli",
    "Engine/Source/Programs/astra-headless",
    "Engine/Source/Programs/astra-player",
    "Engine/Source/Programs/astra-player-vn",
    "Engine/Source/Programs/astra-player-web",
    "Engine/Source/Programs/astra-player-android",
    "Engine/Source/Programs/astra-crash-reporter",
    "Engine/Source/Programs/astra-ui-component-host",
    "Engine/Plugins/Fixtures/headless-presentation-provider",
    "Engine/Plugins/Fixtures/vn-extension-provider",
    "Engine/Plugins/Fixtures/ui-component-provider",
    "Emulator/Source/FamilyApi/astra-emu-family-api",
    "Emulator/Source/Families/astra-emu-fvp-rfvp-core",
    "Emulator/Source/Families/astra-emu-fvp",
    "Emulator/Source/Manager/astra-emu-manager-core",
    "Emulator/Source/Providers/astra-emu-translation-openai-compatible",
    "Emulator/Source/Manager/astra-emu-manager-ui-slint",
    "Emulator/Source/Manager/astra-emu-manager",
    "Emulator/Source/Programs/astra-emu-schema",
    "Emulator/Source/Programs/astra-emu-evidence",
    "Emulator/Source/Programs/astra-emu-family-package",
    "Emulator/Source/Programs/astra-emu-cli",
]
exclude = [
    "Emulator/Source/Families/anzu-hal",
    "Emulator/Source/Families/na_mpeg2_decoder",
    "Emulator/Source/Families/na_wmv_player",
    "Emulator/Source/Families/rfvp-bitmap",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
accesskit = "=0.24.1"
accesskit_android = { version = "=0.7.5", features = ["embedded-dex"] }
accesskit_winit = { version = "=0.33.1", default-features = false, features = ["rwh_06"] }
abi_stable = "0.11"
ashpd = { version = "=0.12.3", default-features = false, features = ["tokio"] }
base64 = "0.22"
blake3 = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
cosmic-text = "=0.18.2"
cpal = "0.17"
directories = "6"
ed25519-dalek = { version = "=3.0.0", default-features = false, features = ["fast"] }
encoding_rs = "0.8"
ffmpeg-next = "8.1"
futures-util = "0.3"
hex = "0.4"
hound = "3.5"
evdev = "=0.13.2"
gilrs = { version = "0.11.2", default-features = false }
gstreamer = "=0.24.2"
gstreamer-app = "=0.24.2"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
indexmap = { version = "2", features = ["serde"] }
js-sys = "0.3"
jni = "0.21.1"
android-activity = { version = "0.6.1", features = ["native-activity", "game-activity"] }
ndk = "0.9.0"
object = { version = "0.37.3", default-features = false, features = ["read"] }
libloading = "0.8"
libc = "0.2"
logos = "0.16.1"
mlua = { version = "0.10", features = ["luau", "vendored", "serialize"] }
objc2 = "0.6.4"
objc2-av-foundation = { version = "0.3.2", default-features = false }
objc2-core-media = { version = "0.3.2", default-features = false }
objc2-core-video = { version = "0.3.2", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false }
miette = { version = "7", features = ["fancy"] }
postcard = { version = "1", features = ["alloc"] }
proptest = "1.11.0"
pollster = "0.4"
proc-macro2 = "1"
quote = "1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
    "stream",
] }
rcgen = "0.14"
rfd = { version = "0.17.2", default-features = false, features = ["wayland", "xdg-portal"] }
rtrb = "0.3.4"
rubato = { version = "4", default-features = false, features = [
    "fft_resampler",
] }
rustfft = "6.4"
schemars = { version = "0.8", features = ["uuid1"] }
rowan = "0.16.1"
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
slint = { version = "=1.17.1", default-features = false }
slint-build = "=1.17.1"
symphonia = { version = "0.6", features = ["all"] }
syn = { version = "2", features = ["full"] }
tempfile = "3"
ctrlc = "3"
text-size = "1.1.1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tungstenite = "0.30"
unicode-segmentation = "1"
chumsky = "1.0.0-alpha.8"
insta = "1.48.0"
file-rotate = "0.8"
fast-srgb8 = "1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["serde"] }
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasmparser = "0.253"
web-sys = "0.3"
windows = { version = "0.62", default-features = false }
winit = { version = "0.30", default-features = false }
keyring = "=4.1.5"
wgpu = "30"
yakui-core = { git = "https://github.com/SecondHalfGames/yakui", rev = "4b87f09ce18c36975de022507123eb360153728d", default-features = false }
yakui-widgets = { git = "https://github.com/SecondHalfGames/yakui", rev = "4b87f09ce18c36975de022507123eb360153728d", default-features = false }
zstd = "0.13"
ndk-sys = "0.6.0"
oboe = "0.6.1"
